# research

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  analyze_mobility.py  analyze_returner.py  analyze_s2-v3.py  analyze_s2_cabdata.py  calculate_moving_distance.py  calculate_turnoverrate.py  car_tmp.py  combine_reward_each_e.py  experience_0.4.txt  geojson2poly.rb  heatmap.py  multi-taxi-mobility_animation.py  output.py  pyproject.toml  ride_prob.py  road_segment.py  simulator.py  smopy.py  test_performance.py  total_reward_0.4.txt
data/maps/: EntireSanFrancisco.geojson  EntireSanFrancisco.poly  SanFrancisco2.geojson  SanFrancisco2.poly  SanFrancisco_test1.poly  SanFrancisco_test1_tmp.geojson  SanFrancisco_test1_trash.geojson  sfc.geojson  sfc_small.geojson  sfc_tmp.geojson
legacy_files/: analyze_mobility.py  analyze_returner.py  calculate_moving_distance.py  calculate_turnoverrate.py  car.py  car_tmp.py  combine_reward_each_e.py  heatmap.py  lane.py  multi-taxi-mobility_animation.py  output.py  reward.py  ride_prob.py  road_segment.py  simulator.py  smopy.py
scripts/: download_data.sh
scripts/utils/: geojson2poly.rb
src/taxi_mobility_simulator/: __init__.py  cli.py
src/taxi_mobility_simulator/config/: __init__.py  settings.py
src/taxi_mobility_simulator/data/: __init__.py  reward_calculator.py  ride_probability.py
src/taxi_mobility_simulator/models/: __init__.py  car.py  lane.py  road_segment.py
src/taxi_mobility_simulator/simulation/: __init__.py  simulator.py
src/taxi_mobility_simulator/utils/: __init__.py  network_cache.py  output.py  visualization.py
tests/: __init__.py  test_car.py
